test/myjobs/2layerExisting/fullstack-subnet-Private-1.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  WARNING!!!!  WARNING!!!! Note that you are billed for the AWS resources that you use when you create a stack from this template. WARNING!!!!  WARNING!!!!  This YAML file is generated using ASUX.org's Batch-based scripting. The command used was - .. tbd .. See details of ASUX.org project at https://github.com/org-asux/org-ASUX.github.io/wiki These were in-turn based on the AWS CloudFormation Sample Template @ https://s3.amazonaws.com/cloudformation-examples/user-guide/cross-stack/SampleNetworkC [...]
Parameters:
  MyVPCStackPrefix:
    Description: The prefix for almost ALL Exports by CFN-templates created by ASUX.org tools.  Because of tools from ASUX.org I can set a default!  Typically it's something like "${MyOrgName}-${MyEnvironment}-${AWSLocation}"
    Type: String
    Default: org-ASUX-Playground-Sydney
  MyVPCName:
    Description: Export ID of the VPC.  Because of tools from ASUX.org I can set a default!  Typically it's something like "${MyOrgName}-${MyEnvironment}-${AWSLocation}"
    Type: String
    Default: org-ASUX-Playground-Sydney-VPCID
  EC2getsPublicIPByDefault:
    Description: Whether any EC2 instance created within this VPC automatically gets a PUBLIC-IP (accessible via internet)
    Type: String
    Default: 'false'
  MyPublicRouteTable:
    Description: Each VPC has (for all purposes) a unique IGW.  This unique default PublicRouteTable is associated with VPC/IGW is this parameter.  Because of tools from ASUX.org I can set a default!  Typically it's something like "org-ASUX-Playground-Sydney-2layerExisting1-PublicRouteTableID"
    Type: String
    Default: org-ASUX-Playground-Sydney-PublicRouteTableID
Conditions:
  doesExistSubnet1: !Equals
  - ASUXorg_Tools_Work
  - ASUXorg_Tools_Work
  doesExistSubnet2: !Equals
  - ASUXorg_Tools_Work
  - ASUXorg_Tools_Work
  doesExistSubnet3: !Equals
  - ASUXorg_Tools_Work
  - ASUXorg_Tools_Work
Resources:
  MyPrivateSubnetAZ1:
    Description: Attention. If you _INSIST_ on specifying a true / false value for the property AssignIpv6AddressOnCreation (whose default value = false), then Ipv6CidrBlock property __MUST__ be specified. - - - Also, Unlike aws-cli, we can provide Tag with Key=Name.
    Type: 'AWS::EC2::Subnet'
    Condition: doesExistSubnet1
    Properties:
      VpcId: !ImportValue
        Ref: MyVPCName
      CidrBlock: 172.31.48.0/20
      MapPublicIpOnLaunch: !Ref 'EC2getsPublicIPByDefault'
      AvailabilityZone: ap-southeast-2a
      Tags:
      - Key: PublicOrPrivate
        Value: Private
      - Key: LOCATION
        Value: Sydney
      - Key: AWSRegion
        Value: ap-southeast-2
      - Key: ENV
        Value: Playground
      - Key: Name
        Value: Subnet-Private1-org-ASUX-Playground-Sydney-2layerExisting1
      - Key: APPLNAME
        Value: UNDEFINED-APPLNAME
      - Key: CHRGCODE
        Value: org.ASUX
      - Key: ITOWNER
        Value: Sarma
      - Key: BIZOWNER
        Value: Sarma
      - Key: CLIENT
        Value: SomeClient
      - Key: ARCHLAYER
        Value: Network
      - Key: SNAPSHOTS
        Value: 'No'
      - Key: USERBASE
        Value: admins
      - Key: DISTRLIST
        Value: tosarma@gmail.com
      - Key: SVCGRP
        Value: org.ASUX
      - Key: VALIDATED
        Value: 'No'
      - Key: MyOrgName
        Value: org-ASUX
      - Key: MyEnvironment
        Value: Playground
      - Key: MyDomainName
        Value: playground.asux.org
      - Key: Created
        Value: Thu Aug 15 14:54:57 EDT 2019
      - Key: CreatedBy
        Value: arn:aws:iam::591580567012:user/sarmaapi
  MyPrivateSubnetAZ2:
    Description: Attention. If you _INSIST_ on specifying a true / false value for the property AssignIpv6AddressOnCreation (whose default value = false), then Ipv6CidrBlock property __MUST__ be specified. - - - Also, Unlike aws-cli, we can provide Tag with Key=Name.
    Type: 'AWS::EC2::Subnet'
    Condition: doesExistSubnet2
    Properties:
      VpcId: !ImportValue
        Ref: MyVPCName
      CidrBlock: 172.31.64.0/20
      MapPublicIpOnLaunch: !Ref 'EC2getsPublicIPByDefault'
      AvailabilityZone: ap-southeast-2b
      Tags:
      - Key: PublicOrPrivate
        Value: Private
      - Key: LOCATION
        Value: Sydney
      - Key: AWSRegion
        Value: ap-southeast-2
      - Key: ENV
        Value: Playground
      - Key: Name
        Value: Subnet-Private2-org-ASUX-Playground-Sydney-2layerExisting1
      - Key: APPLNAME
        Value: UNDEFINED-APPLNAME
      - Key: CHRGCODE
        Value: org.ASUX
      - Key: ITOWNER
        Value: Sarma
      - Key: BIZOWNER
        Value: Sarma
      - Key: CLIENT
        Value: SomeClient
      - Key: ARCHLAYER
        Value: Network
      - Key: SNAPSHOTS
        Value: 'No'
      - Key: USERBASE
        Value: admins
      - Key: DISTRLIST
        Value: tosarma@gmail.com
      - Key: SVCGRP
        Value: org.ASUX
      - Key: VALIDATED
        Value: 'No'
      - Key: MyOrgName
        Value: org-ASUX
      - Key: MyEnvironment
        Value: Playground
      - Key: MyDomainName
        Value: playground.asux.org
      - Key: Created
        Value: Thu Aug 15 14:54:57 EDT 2019
      - Key: CreatedBy
        Value: arn:aws:iam::591580567012:user/sarmaapi
  MyPrivateSubnetAZ3:
    Description: Attention. If you _INSIST_ on specifying a true / false value for the property AssignIpv6AddressOnCreation (whose default value = false), then Ipv6CidrBlock property __MUST__ be specified. - - - Also, Unlike aws-cli, we can provide Tag with Key=Name.
    Type: 'AWS::EC2::Subnet'
    Condition: doesExistSubnet3
    Properties:
      VpcId: !ImportValue
        Ref: MyVPCName
      CidrBlock: 172.31.80.0/20
      MapPublicIpOnLaunch: !Ref 'EC2getsPublicIPByDefault'
      AvailabilityZone: ap-southeast-2c
      Tags:
      - Key: PublicOrPrivate
        Value: Private
      - Key: LOCATION
        Value: Sydney
      - Key: AWSRegion
        Value: ap-southeast-2
      - Key: ENV
        Value: Playground
      - Key: Name
        Value: Subnet-Private3-org-ASUX-Playground-Sydney-2layerExisting1
      - Key: APPLNAME
        Value: UNDEFINED-APPLNAME
      - Key: CHRGCODE
        Value: org.ASUX
      - Key: ITOWNER
        Value: Sarma
      - Key: BIZOWNER
        Value: Sarma
      - Key: CLIENT
        Value: SomeClient
      - Key: ARCHLAYER
        Value: Network
      - Key: SNAPSHOTS
        Value: 'No'
      - Key: USERBASE
        Value: admins
      - Key: DISTRLIST
        Value: tosarma@gmail.com
      - Key: SVCGRP
        Value: org.ASUX
      - Key: VALIDATED
        Value: 'No'
      - Key: MyOrgName
        Value: org-ASUX
      - Key: MyEnvironment
        Value: Playground
      - Key: MyDomainName
        Value: playground.asux.org
      - Key: Created
        Value: Thu Aug 15 14:54:57 EDT 2019
      - Key: CreatedBy
        Value: arn:aws:iam::591580567012:user/sarmaapi
  MyPrivateSubnetRouteTableAssociationAZ1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Condition: doesExistSubnet1
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ1'
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ1-ID'
  MyPrivateSubnetRouteTableAssociationAZ2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Condition: doesExistSubnet2
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ2'
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ2-ID'
  MyPrivateSubnetRouteTableAssociationAZ3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Condition: doesExistSubnet3
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ3'
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ3-ID'
  PrivateRouteToNATGW1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ1-ID'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue 'org-ASUX-Playground-Sydney-NATGW-1-ID'
  PrivateRouteToNATGW2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ2-ID'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue 'org-ASUX-Playground-Sydney-NATGW-2-ID'
  PrivateRouteToNATGW3:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateRouteTable-AZ3-ID'
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue 'org-ASUX-Playground-Sydney-NATGW-3-ID'
  MyPrivateSubnetNetworkAclAssociation1:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Condition: doesExistSubnet1
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ1'
      NetworkAclId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateNetworkAclID'
  MyPrivateSubnetNetworkAclAssociation2:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Condition: doesExistSubnet2
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ2'
      NetworkAclId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateNetworkAclID'
  MyPrivateSubnetNetworkAclAssociation3:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Condition: doesExistSubnet3
    Properties:
      SubnetId: !Ref 'MyPrivateSubnetAZ3'
      NetworkAclId: !ImportValue 'org-ASUX-Playground-Sydney-PrivateNetworkAclID'
Outputs:
  DefaultPrivateSubnet1:
    Description: The subnet no.1's ID to use for web servers if public, or for databases if private.
    Value: !Ref 'MyPrivateSubnetAZ1'
    Condition: doesExistSubnet1
    Export:
      Name: 'org-ASUX-Playground-Sydney-2layerExisting1-Subnet-Private1-ID'
  DefaultPrivateSubnet2:
    Description: The subnet no.2's ID to use for web servers if public, or for databases if private.
    Value: !Ref 'MyPrivateSubnetAZ2'
    Condition: doesExistSubnet2
    Export:
      Name: 'org-ASUX-Playground-Sydney-2layerExisting1-Subnet-Private2-ID'
  DefaultPrivateSubnet3:
    Description: The subnet no.3's ID to use for web servers if public, or for databases if private.
    Value: !Ref 'MyPrivateSubnetAZ3'
    Condition: doesExistSubnet3
    Export:
      Name: 'org-ASUX-Playground-Sydney-2layerExisting1-Subnet-Private3-ID'
